src/test/deca/codegen/invalid/SansObjet/ArithmeticFloatOverflow-Add.deca
// Description:
//    Overflow for a float arithmetic addition
//
// Results:
//     ERROR: float_arithmetic_overflow
//
// History:
//    created on 13/01/2022

{
    //TODO
}
